style/main.css
*
{
    box-sizing: border-box;
}
body
{
    perspective: 200px;
    background: #163c51;
    
}
.Logo{
    font-family: 'good_timesregular';
    font-size: 28px;
    
}
header .hd {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 10%;
    padding-right: 10%;
    background: #121212;
    color: aliceblue;
}
header .hd img
{
    width: 40px;
    height: 50px;
    border-radius: 50%;
}

header .hd h2
{
    margin: 0px;
    float: left;
}
header .hd ul {
    margin: 0px;
    padding-left: 0px;
    list-style-type: none;
    overflow: hidden;
    float: right
}

header .hd ul li {
    width: 150px;
    height: 50px;
    font-size: 20px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    z-index: 0;
    border: 1px solid #eee;
    float: left;
    padding: 20px 20px;
    transition: all 1s;
    margin: 0px 5px;
}
header .hd ul li a {
    text-decoration: none;
    color: aliceblue;
}
header .hd ul li::before, header .hd ul li::after {
  position: absolute;
  background: #121212;
  z-index: -1;
  transition: 1s;
  content: '';
}

header .hd ul li::before {
  height: 50px;
  width: 130px;
}

header .hd ul li::after {
  height: 30px;
  width: 150px;
}
header .hd ul li:hover::before {
  width: 0px;
  background-color: #163c51
}

header .hd ul li:hover::after {
  height: 0px;
  background-color: #163c51
}
header .hd ul li:hover {
    background-color: #163c51;
    
}
header .slider
{
    align-items: center;
    justify-content: center;
    background: linear-gradient( rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25) ), url(../Photos/fabio-oyXis2kALVg-unsplash.jpg);
    background-size: cover;
    background-position: center;
    height: 460px;
    text-align: center;
}
header .slider p{
    color:white;
    font-size: 30px;
    font-style: oblique;
    animation-name: test2;
    animation-duration: 2.6s;
}

header .slider h3{
    display: none;
    color:white;
    font-size: 30px;
    font-style: oblique;
    animation-name: test2;
    animation-duration: 2.6s;
}

header .slider h2 {
    color: white;
    width: 35%;
    padding-top: 10%;
    font-size: 45px;
    margin: 0px auto;
    animation-name: test;
    animation-duration: 2s;
    animation-timing-function: ease-in-out;
    overflow: hidden;
    
}


header .slider h2 span
{
    display: block;
    background: #fff;
}

.g
{
    position: absolute;
    height: 2px;
    width: 30%;
    left: 35%;
    animation-name: intro;
    animation-duration: 2s;
    animation-timing-function: ease;
}
.s
{
    position: absolute;
    height: 2px;
    width: 30%;
    left: 35%;
    animation-name: intro2;
    animation-duration: 2s;
    animation-timing-function: ease;
}


@keyframes intro
{
    from
    {
        left: 0%;
    }
    to
    {
        left: 35%;
    }
}
@keyframes intro2
{
    from
    {
        left: 100%;
    }
    to
    {
        left: 35%;
    }
}


@keyframes test
{
    0%{
        opacity: 0
    }
    
    25%{
        opacity: .25
    }
    50%{
        opacity: .50
    }
    75%{
        opacity: .75
    }
    100%
    {
        opacity: 1
    }
}
@keyframes test2
{
    0%
    {
        opacity: 0
    }
    
    25%
    {
        opacity: 0
    }
    50%
    {
        opacity: 0
    }
    75%
    {
        opacity: 0
    }
    100%
    {
        opacity: 1
    }
}
.main
{
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-content: center;
}
.main h2{
    color: aliceblue;
    text-align: center;
}
.main ul {
    display: flex;
    justify-content: center;
}
.main ul img {
    width: 180px;
    height: 250px;
}
.tt{
    margin: 5px 20px;
    transition: transform .8s ease;
    flex-wrap: wrap;
    width: 200px;
    height: 300px;
    background-color: #458597;
    color: aliceblue;
    display: flex;
    justify-content: center;
    align-content: center;
}
.tt:hover
{
    background-color: #275f76;
    transform: scale(1.2, 1.2);
}
footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 10%;
    padding-right: 10%;
    background: #121212;
    color: aliceblue;
}
footer .Copy
{
    font-size: 30px;
    margin: 0;
    padding: 0;
}
footer .websites
{
    display: flex;
    flex-direction: column;
    margin: 0px;
    padding-left: 0px;
    list-style-type: none;
    overflow: hidden;
    float: right
}
footer .websites li {
    width: 170px;
    height: 50px;
    font-size: 20px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    z-index: 0;
    border: 1px solid #eee;
    float: left;
    padding: 10px 10px;
    transition: all 1s;
    margin: 0px 5px;
}
footer .websites a {
    text-decoration: none;
    color: aliceblue;
}
footer .websites li::before, footer .websites li::after {
  position: absolute;
  background: #121212;
  z-index: -1;
  transition: 1s;
  content: '';
}

footer .websites li::before {
  height: 50px;
  width: 150px;
}

footer .websites li::after {
  height: 30px;
  width: 170px;
}
footer .websites li:hover::before {
  width: 0px;
  background-color: #163c51
}

footer .websites li:hover::after {
  height: 0px;
  background-color: #163c51
}
footer .websites li:hover {
    background-color: #163c51;
}
footer h3 
{
    margin: 0;
}
footer .Contact li
{
    float: left;
    display: inline-block;
    margin-left: 2.5px;
    margin-right: 2.5px;
    cursor: pointer;
}
footer .Contact li a img
{
    height: 35px;
    width: 35px;
    border-radius: 50%;
    cursor: pointer;
}

@media screen and (min-width:200px) and (max-width:450px) 
{
    header .hd {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding-left: 5%;
        padding-right: 5%;
        background: #121212;
        flex-direction: column;
    }
    header .hd h2
    {
        margin: 0px;
    }
    header .hd ul {
        padding-top: 5px;
        padding-bottom: 7px;
        display: flex;
        flex-direction: column;
    }
    header .hd ul li 
    {
        height: 20px;
        width: 55vh;
    }

    header .hd ul li::before {
      height: 22px;
      width: 130px;
    }

    header .hd ul li::after {
      height: 22px;
      width: 55vh;
    }
    
    header .slider
    {
        height: 330px;
    }
    header .slider p{
    color:white;
    font-size: 17px;
    }
    header .slider h3{
        display: block;
        color:white;
        font-size: 17px;
    }

    header .slider h2 {
        width: 50%;
        padding-top: 20%;
        font-size: 20px;
        font-weight: 600;
        margin: 0px auto;
    }
    .g
    {
        position: absolute;
        height: 2px;
        width: 44%;
        left: 28.1%;
        animation-name: t1;
        animation-duration: 2s;
        animation-timing-function: ease;
    }
    .s
    {
        position: absolute;
        height: 2px;
        width: 44%;
        left: 28.1%;
        animation-name: t2;
        animation-duration: 2s;
        animation-timing-function: ease;
    }
    @keyframes t1
    {
        from
        {
            left: 0%;
        }
        to
        {
            left: 28.1%;
        }
    }
    @keyframes t2
    {
        from
        {
            left: 100%;
        }
        to
        {
            left: 28.1%;
        }

    }
    .main
    {
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
        justify-content: center;
        align-content: center;
    }
    .main h2{
        color: aliceblue;
        text-align: center;
        font-size: 15px;
    }
    .main ul {
        padding: 0;
        display: flex;
        margin-top: 10px;
        margin-bottom: 10px;
        margin-right: auto;
        margin-left: auto;
    }
    .main ul img {
    width: auto;
    height: auto;
    }
    .tt{
        margin: 0px 9px;
        flex-wrap: wrap;
        width: 9.8vh;
        height: 30vw;
        background-color: #458597;
        color: aliceblue;
        display: flex;
        justify-content: center;
        align-content: center;
    }


    footer {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background: #121212;
        color: aliceblue;
    }
    header .hd ul {
        padding-top: 5px;
        padding-bottom: 7px;
        display: flex;
        flex-direction: column;
    }
    footer .websites li
    {
        margin: 5px 10px;
        height: 25px;
        width: 54vh;
    }

    footer .websites li::before {
      height: 22px;
      width: 0px;
    }

    footer .websites li::after {
        height: 20px;
        width: 90px;
    }
    footer h3
    {
        text-align: center;
        font-size: 18px
    }
    footer li a
    {
        font-size: 18px
    }
    
    footer .Copy
    {   display: flex;
        font-weight: bold;
        font-size: 15px;
    }
    footer .Contact
    {
        padding-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
    }
    footer .Contact li
    {
        
        float: none;
        display: inline-block;
        margin-left: 2.5px;
        margin-right: 2.5px;
        cursor: pointer;
    }
    footer .Contact li a img
    {
        height: 35px;
        width: 35px;
        border-radius: 50%;
        cursor: pointer;
    }
}

